fix: fixing background z-index

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -267,7 +267,7 @@ span {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 0;
   display: block;
   width: 100%;
   height: 100%;
